# text-builder-lawful-conversions

./: cabal.project  text-builder-lawful-conversions.cabal
.github/workflows/: build.yaml  format-and-test.yaml  main-maintenance.yaml  pr-validation.yaml  release.yaml
src/hspec/: Main.hs
src/hspec/Main/: LawfulConversionsHspec.hs
src/hspec/Main/Conversions/: StrictBuilder.hs  StrictTextBuilder.hs
