cabal-version: 3.0
name: text-builder-lawful-conversions
version: 0.1.1
category: Text, Builders, Conversions
synopsis: Orphan instances of "lawful-conversions" for "text-builder"
homepage: https://github.com/nikita-volkov/text-builder-lawful-conversions
bug-reports: https://github.com/nikita-volkov/text-builder-lawful-conversions/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2025, Nikita Volkov
license: MIT
license-file: LICENSE

source-repository head
  type: git
  location: https://github.com/nikita-volkov/text-builder-lawful-conversions

common base
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedStrings
    ParallelListComp
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnboxedTuples
    ViewPatterns

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N -I0 -qg"

common test
  import: base
  ghc-options:
    -threaded
    "-with-rtsopts=-N -I0 -qg"

library
  import: base
  hs-source-dirs: src/library
  exposed-modules:
    TextBuilderLawfulConversions

  other-modules:
    TextBuilderLawfulConversions.LazyBuilder
    TextBuilderLawfulConversions.LazyText
    TextBuilderLawfulConversions.StrictBuilder
    TextBuilderLawfulConversions.StrictText
    TextBuilderLawfulConversions.StrictTextBuilder

  build-depends:
    base >=4.13 && <5,
    lawful-conversions >=0.2 && <0.3,
    text >=1.2 && <3,
    text-builder ^>=1.0.0.1,
    text-builder-core ^>=0.1.1.1,

test-suite hspec
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/hspec
  main-is: Main.hs
  other-modules:
    Main.Conversions.StrictBuilder
    Main.Conversions.StrictTextBuilder
    Main.LawfulConversionsHspec

  build-depends:
    QuickCheck >=2.15 && <3,
    base,
    hspec >=2.11 && <3,
    lawful-conversions,
    quickcheck-instances ^>=0.3.32,
    text,
    text-builder,
    text-builder-lawful-conversions,
